# chatbot.bot

./: .env.template  .gitignore  Makefile  README  README.md  bridger.py  bridges.py  bridges.sh  client.py  client_llama_cpp.py  client_simple.py  gpt.py  help.txt  logit_extraction.ipynb  print_utils.py  proto.ipynb  pyproject.toml  test_llama.py  test_llama_2.py  zephyrus-concat.sh  zephyrus-overlap.sh
legacy/: gpt.py  requirements.txt
proto/: gpt-proto.ipynb
