[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["nz"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = {version = "5.13.0", extras = ["client"]}
python-engineio = "==4.11.2"
blessed = "^1.20.0"
regex = "^2024.11.6"
requests = "^2.32.3"
llama-cpp-python = {extras = ["cuda"], version = "==0.3.8"}
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
